--- a/app/src/main/res/layout/activity_task_item.xml
+++ b/app/src/main/res/layout/activity_task_item.xml
@@ -1,111 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fillViewport="true"
-    tools:context=".TaskItemActivity"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_background"
-    android:paddingHorizontal="15dp">
+    tools:context=".TaskItemActivity"
+    android:background="@drawable/gradient_background">
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
+        android:fillViewport="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:paddingHorizontal="15dp">
 
-        <RelativeLayout
-            android:id="@+id/relativeLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <View
-                android:id="@+id/lineView"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/ic_arrow_back_24dp"
-                android:layout_centerVertical="true"/>
-
-            <TextView
-                android:id="@+id/superTaskTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="24sp"
-                android:layout_toEndOf="@id/lineView"
-                android:layout_margin="16dp"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="10dp"
-            android:layout_marginVertical="10dp">
-
-            <EditText
-                android:id="@+id/informationEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minLines="1"
-                android:inputType="textMultiLine|textCapSentences"
-                android:hint="@string/add_information"
-                android:background="@drawable/edit_text_shape"
-                android:padding="12dp"
-                android:paddingStart="32dp"
-                android:imeOptions="actionSend"
-                android:layout_centerVertical="true"
-                android:textColor="@color/colorText"
-                android:textColorHint="@color/colorHintGray"
-                tools:ignore="RtlSymmetry"
-                android:importantForAutofill="no"/>
-
-            <View
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/ic_notes_24dp"
-                android:layout_alignParentStart="true"
-                android:layout_margin="5dp"
-                android:layout_centerVertical="true"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="10dp">
-
-            <EditText
-                android:id="@+id/subTaskEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:inputType="textCapSentences"
-                android:hint="@string/add_subtask"
-                android:background="@drawable/edit_text_shape"
-                android:padding="12dp"
-                android:paddingStart="32dp"
-                android:imeOptions="actionSend"
-                android:layout_centerVertical="true"
-                android:textColor="@color/colorText"
-                android:textColorHint="@color/colorHintGray"
-                tools:ignore="RtlSymmetry"
-                android:importantForAutofill="no"/>
-
-            <View
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/ic_add_24dp"
-                android:layout_alignParentStart="true"
-                android:layout_margin="5dp"
-                android:layout_centerVertical="true"/>
-
-        </RelativeLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="12dp"/>
+            android:orientation="vertical">
 
-    </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+            <RelativeLayout
+                android:id="@+id/relativeLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <View
+                    android:id="@+id/lineView"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/ic_arrow_back_24dp"
+                    android:layout_centerVertical="true"/>
+
+                <TextView
+                    android:id="@+id/superTaskTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:layout_toEndOf="@id/lineView"
+                    android:layout_margin="16dp"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="10dp"
+                android:layout_marginVertical="10dp">
+
+                <EditText
+                    android:id="@+id/informationEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minLines="1"
+                    android:inputType="textMultiLine|textCapSentences"
+                    android:hint="@string/add_information"
+                    android:background="@drawable/edit_text_shape"
+                    android:padding="12dp"
+                    android:paddingStart="32dp"
+                    android:imeOptions="actionSend"
+                    android:layout_centerVertical="true"
+                    android:textColor="@color/colorText"
+                    android:textColorHint="@color/colorHintGray"
+                    tools:ignore="RtlSymmetry"
+                    android:importantForAutofill="no"/>
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/ic_notes_24dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="5dp"
+                    android:layout_centerVertical="true"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="10dp">
+
+                <EditText
+                    android:id="@+id/subTaskEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:inputType="textCapSentences"
+                    android:hint="@string/add_subtask"
+                    android:background="@drawable/edit_text_shape"
+                    android:padding="12dp"
+                    android:paddingStart="32dp"
+                    android:imeOptions="actionSend"
+                    android:layout_centerVertical="true"
+                    android:textColor="@color/colorText"
+                    android:textColorHint="@color/colorHintGray"
+                    tools:ignore="RtlSymmetry"
+                    android:importantForAutofill="no"/>
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/ic_add_24dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="5dp"
+                    android:layout_centerVertical="true"/>
+
+            </RelativeLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="12dp"/>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+</FrameLayout>
